tests/spec/parse/snapshots/field_access_chained.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(cfg: Config) {
    let username = cfg.auth.user.name;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "cfg",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Config",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 6,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "username",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 30,
                                    byte_length: 8,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: DotAccess {
                            expression: DotAccess {
                                expression: DotAccess {
                                    expression: Identifier {
                                        value: "cfg",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 41,
                                            byte_length: 3,
                                        },
                                        resolution: Unresolved,
                                    },
                                    member: "auth",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 41,
                                        byte_length: 8,
                                    },
                                    resolution: Unresolved,
                                },
                                member: "user",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 41,
                                    byte_length: 13,
                                },
                                resolution: Unresolved,
                            },
                            member: "name",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 41,
                                byte_length: 18,
                            },
                            resolution: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 26,
                            byte_length: 33,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 22,
                    byte_length: 40,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 61,
        },
    },
]
