tests/spec/parse/snapshots/field_access_method_call.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(user: User) {
    let name = user.get_name();
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "user",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "User",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 4,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "name",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 4,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: DotAccess {
                                expression: Identifier {
                                    value: "user",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 36,
                                        byte_length: 4,
                                    },
                                    resolution: Unresolved,
                                },
                                member: "get_name",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 13,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 15,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 26,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 33,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
]
