tests/spec/parse/snapshots/field_access_tuple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(pair: (int, string)) {
    let first_item = pair.0;
    let second_item = pair.1;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "pair",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Tuple {
                        elements: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 16,
                                    byte_length: 3,
                                },
                            },
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 21,
                                    byte_length: 6,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 13,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "first_item",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 38,
                                    byte_length: 10,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: DotAccess {
                            expression: Identifier {
                                value: "pair",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 4,
                                },
                                resolution: Unresolved,
                            },
                            member: "0",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 51,
                                byte_length: 6,
                            },
                            resolution: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 34,
                            byte_length: 23,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "second_item",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 65,
                                    byte_length: 11,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: DotAccess {
                            expression: Identifier {
                                value: "pair",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 79,
                                    byte_length: 4,
                                },
                                resolution: Unresolved,
                            },
                            member: "1",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 79,
                                byte_length: 6,
                            },
                            resolution: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 61,
                            byte_length: 24,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 58,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 87,
        },
    },
]
