tests/spec/parse/snapshots/for_loop_tuple_binding.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(map_data: Map<string, int>) {
    for (key, value) in map_data {
      print(key, value);
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "map_data",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 8,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Map",
                        params: [
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 6,
                                },
                            },
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 31,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 16,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    For {
                        binding: Binding {
                            pattern: Tuple {
                                elements: [
                                    Identifier {
                                        identifier: "key",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 46,
                                            byte_length: 3,
                                        },
                                        binding: None,
                                    },
                                    Identifier {
                                        identifier: "value",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 51,
                                            byte_length: 5,
                                        },
                                        binding: None,
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 45,
                                    byte_length: 12,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        iterable: Identifier {
                            value: "map_data",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 61,
                                byte_length: 8,
                            },
                            resolution: Unresolved,
                        },
                        body: Block {
                            items: [
                                Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 76,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "key",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 82,
                                                byte_length: 3,
                                            },
                                            resolution: Unresolved,
                                        },
                                        Identifier {
                                            value: "value",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 87,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 76,
                                        byte_length: 17,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 70,
                                byte_length: 28,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 41,
                            byte_length: 57,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 37,
                    byte_length: 63,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 99,
        },
    },
]
