tests/spec/parse/snapshots/format_string_multiple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = f"hello {first} {last}!"; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: FormatString(
                                [
                                    Text(
                                        "hello ",
                                    ),
                                    Expression(
                                        Identifier {
                                            value: "first",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 35,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ),
                                    Text(
                                        " ",
                                    ),
                                    Expression(
                                        Identifier {
                                            value: "last",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 43,
                                                byte_length: 4,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ),
                                    Text(
                                        "!",
                                    ),
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 26,
                                byte_length: 24,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 37,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 42,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 52,
        },
    },
]
